fix: sidebar icons, make it a little bigger and make the gap smaller

--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -51,7 +51,7 @@
 #sidebar nav a {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 8px;
   padding: 9px 10px;
   border-radius: 7px;
   font-size: var(--md);
@@ -75,8 +75,8 @@
 }
 
 #sidebar nav a svg {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   flex-shrink: 0;
 }
 
